Addon_Queries/DELETE/DELETE_Q/DELETE_Q/logs/hls_run_csim_39268.backup.log
INFO: [HLS 200-2005] Using work_dir /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/DELETE_Q 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=/primary/PGSQL_Vitis/DELETE_Q/DELETE_Q.cpp' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(7)
INFO: [HLS 200-10] Adding design file '/primary/PGSQL_Vitis/DELETE_Q/DELETE_Q.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/primary/PGSQL_Vitis/DELETE_Q/DELETE_Q.hpp' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file '/primary/PGSQL_Vitis/DELETE_Q/DELETE_Q.hpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=/primary/PGSQL_Vitis/DELETE_Q/DELETE_Q_Test.cpp' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(9)
INFO: [HLS 200-10] Adding test bench file '/primary/PGSQL_Vitis/DELETE_Q/DELETE_Q_Test.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=delete_1' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(11)
INFO: [HLS 200-1465] Applying ini 'flow_target=vitis' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vitis'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-435] Setting 'open_solution -flow_target vitis' configuration: config_interface -m_axi_latency=64
INFO: [HLS 200-435] Setting 'open_solution -flow_target vitis' configuration: config_interface -m_axi_alignment_byte_size=64
INFO: [HLS 200-435] Setting 'open_solution -flow_target vitis' configuration: config_interface -m_axi_max_widen_bitwidth=512
INFO: [HLS 200-435] Setting 'open_solution -flow_target vitis' configuration: config_rtl -register_reset_num=3
INFO: [HLS 200-1465] Applying ini 'part=xcu50-fsvh2104-3-e' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xcu50-fsvh2104-3-e'
INFO: [HLS 200-1465] Applying ini 'csim.code_analyzer=0' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(10)
INFO: [HLS 200-1465] Applying ini 'package.output.format=xo' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../DELETE_Q_Test.cpp in debug mode
../../../../../DELETE_Q_Test.cpp:82:45: error: use of undeclared identifier 'TEST_SIZE'
    std::cout << "Total input records: " << TEST_SIZE << std::endl;
                                            ^
../../../../../DELETE_Q_Test.cpp:86:25: error: use of undeclared identifier 'TEST_SIZE'
    for (int i = 0; i < TEST_SIZE; i++) {
                        ^
../../../../../DELETE_Q_Test.cpp:94:26: error: use of undeclared identifier 'TEST_SIZE'
    if (output_count == (TEST_SIZE - expected_deleted)) {
                         ^
../../../../../DELETE_Q_Test.cpp:99:39: error: use of undeclared identifier 'TEST_SIZE'
        std::cout << "Expected: " << (TEST_SIZE - expected_deleted) << ", Got: " << output_count << std::endl;
                                      ^
4 errors generated.
make: *** [csim.mk:88: obj/DELETE_Q_Test.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 18.06 seconds. Total CPU system time: 2.11 seconds. Total elapsed time: 19.93 seconds; peak allocated memory: 326.980 MB.
